<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hys.radiobuttondemo.MainActivity"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1"
        android:textSize="20sp"
        android:textColor="#006699"
        android:textStyle="bold"/>
    <RadioGroup 
        android:id="@+id/sex"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
        <RadioButton
            android:id="@+id/boy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boy"
            />
        <RadioButton 
            android:id="@+id/girl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/girl"/>
    </RadioGroup>
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#336600"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question2"
        android:textSize="20sp"
        android:textColor="#006699"
        android:textStyle="bold"/>
    <RadioGroup 
        android:id="@+id/by"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
        <RadioButton
            android:id="@+id/byes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/byes"
            />
        <RadioButton 
            android:id="@+id/bno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bno"/>
    </RadioGroup>
</LinearLayout>
